# discObot

./: .env  .gitignore  README.md  gpt.py  hi_bot.py  main.py  pyproject.toml
